# vaern-mmo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  TODO.md  atmosphere_assets.md  dalewatch_redesign.md  index.html
assets/: README.md  meshtint_piece_taxonomy.yaml  meshtint_weapon_grips.yaml  npc_mesh_map.yaml  quaternius_weapon_grips.yaml
assets/meshy/: _log.csv
assets/meshy/ashen_holt__ash_grave_circle/: prompt.txt  task.json
assets/meshy/ashen_holt__blackleaf_spring/: prompt.txt  task.json
assets/meshy/ashen_holt__burnt_arbor/: prompt.txt  task.json
assets/meshy/ashen_holt__crow_pillar/: prompt.txt  task.json
assets/meshy/ashweald__zone/: task.json  (+1 more)
assets/shaders/: biome_blend.wgsl
crates/vaern-assets/: Cargo.toml
crates/vaern-assets/src/: animals.rs  lib.rs  regions.rs
crates/vaern-assets/src/meshtint/: animation.rs  catalog.rs  character.rs  grips.rs  mod.rs  outfit.rs  overlay.rs  palette.rs  taxonomy.rs  visibility.rs
crates/vaern-assets/src/polyhaven/: mod.rs
crates/vaern-assets/src/quaternius/: bones.rs  character.rs  grips.rs  mod.rs  overlay.rs  props.rs  resolve.rs
crates/vaern-cartography/: Cargo.toml
crates/vaern-cartography/src/: edits.rs  heightfield.rs  lib.rs  raster.rs  runtime_resolver.rs  style.rs  validate.rs  world_terrain.rs
crates/vaern-cartography/src/render/: mod.rs  svg.rs  world.rs  zone.rs
crates/vaern-cartography/tests/: render_golden.rs
crates/vaern-character/: Cargo.toml
crates/vaern-client/: Cargo.toml
crates/vaern-client/src/: attack_viz.rs  belt_ui.rs  chat_ui.rs  combat_ui.rs  diagnostic.rs  harvest_ui.rs  hotbar_ui.rs  hud.rs  input.rs  interact.rs  inventory_ui.rs  item_icons.rs  level_up_ui.rs  loot_ui.rs  main.rs  menu.rs  nameplates.rs  net.rs  party_ui.rs  quests.rs  roll_window.rs  shared.rs  stat_screen.rs  unit_frame.rs  vendor_ui.rs  vfx.rs  voxel_biomes.rs  voxel_demo.rs
crates/vaern-client/src/scene/: animation.rs  camera.rs  dressing.rs  ground.rs  hub_regions.rs  mod.rs  render.rs  setup.rs
crates/vaern-combat/: Cargo.toml
crates/vaern-combat/src/: anim.rs  components.rs  damage.rs  effects.rs  lib.rs  systems.rs
crates/vaern-combat/tests/: damage.rs  parity.rs
crates/vaern-combat/tests/common/: mod.rs
crates/vaern-core/: Cargo.toml
crates/vaern-data/: Cargo.toml
crates/vaern-economy/: Cargo.toml
crates/vaern-economy/src/: currency.rs  lib.rs  vendor.rs  wallet.rs
crates/vaern-editor/: Cargo.toml
crates/vaern-editor/src/: cli.rs  lib.rs  state.rs
crates/vaern-editor/src/camera/: controller.rs  ground_clamp.rs  mod.rs
crates/vaern-editor/src/cartography_overlay/: mod.rs
crates/vaern-editor/src/dressing/: mod.rs  selection.rs  snap.rs  spawn.rs  transform_gizmo.rs
crates/vaern-editor/src/environment/: mod.rs
crates/vaern-editor/src/input/: bindings.rs  focus.rs  mod.rs
crates/vaern-editor/src/modes/: biome_paint.rs  mod.rs  place.rs  scatter_preview.rs  select.rs  voxel_brush.rs
crates/vaern-editor/src/persistence/: atomic.rs  dirty.rs  mod.rs  voxel_io.rs  zone_io.rs
crates/vaern-editor/src/ui/: console.rs  environment_panel.rs  inspector.rs  mod.rs  palette.rs  theme.rs  toolbar.rs
crates/vaern-editor/src/voxel/: biome_blend.rs  biomes.rs  elevation.rs  mod.rs  overrides.rs  procedural.rs  render_opt.rs  store.rs  stream.rs  undo.rs
crates/vaern-editor/src/world/: load.rs  markers.rs  mod.rs
crates/vaern-equipment/: Cargo.toml
crates/vaern-equipment/src/: lib.rs
crates/vaern-inventory/: Cargo.toml
crates/vaern-inventory/src/: lib.rs
crates/vaern-items/: Cargo.toml
crates/vaern-items/src/: composition.rs  lib.rs
crates/vaern-loot/: Cargo.toml
crates/vaern-museum/: Cargo.toml
crates/vaern-museum/src/: atlas.rs  camera.rs  composer.rs  main.rs  scene.rs  ui.rs
crates/vaern-persistence/: Cargo.toml
crates/vaern-persistence/src/: cosmetic.rs  humanoid.rs  lib.rs  sanitize.rs  schema.rs  store.rs
crates/vaern-persistence/tests/: cosmetic_tags.rs  round_trip.rs  store.rs
crates/vaern-professions/: Cargo.toml
crates/vaern-protocol/: Cargo.toml
crates/vaern-protocol/src/: config.rs  lib.rs
crates/vaern-server/: Cargo.toml
crates/vaern-server/src/: accounts.rs  accounts_io.rs  aoi.rs  belt_io.rs  chat_io.rs  class_kits.rs  combat_io.rs  connect.rs  consume_io.rs  crash.rs  data.rs  inventory_io.rs  logging.rs  loot_io.rs  loot_rolls.rs  main.rs  movement.rs  npc_mesh.rs  party_io.rs  persistence.rs  player_state.rs  quests.rs  resource_nodes.rs  respawn.rs  starter_gear.rs  stats_sync.rs  util.rs  vendor_io.rs  voxel_world.rs  wallet_io.rs  xp.rs
crates/vaern-server/src/npc/: ai.rs  components.rs  mod.rs  quest_poi.rs  spawn.rs  stats.rs
crates/vaern-sim/: Cargo.toml
crates/vaern-sim/src/: main.rs
crates/vaern-stats/: Cargo.toml
crates/vaern-voxel/: Cargo.toml
docker/web/: Dockerfile  build.ts  nginx.conf
icons/: generation_log.csv
icons/items/: generation_log.csv
scripts/: assign_order_institutions.py  audit_quest_landmarks.py  balance_world_layout.py  build_web_data.py  clean_gltf_attrs.py  convert_meshtint.py  download_biome_textures.sh  download_polyhaven.py  emit_world_layout.py  extract_animals.py  flail_bake_off.py  generate_character.py  generate_class_reference.py  generate_emblems.py  generate_flagship.py  generate_icon.py  generate_icons_batch.py  generate_item_icons.py  generate_meshy.py  generate_order_portraits.py  migrate_zone_schema.py  push-web.sh  refactor_institutions.py  refactor_yaml_layout.py  regen_race_portraits.py  resize_zones_by_tier.py  run-multiplayer.sh  seed_bestiary.py  seed_connections.py  seed_dalewatch_redesign.py  seed_dungeons.py  seed_geography.py  seed_items.py  seed_mobs.py  seed_quests.py  seed_races.py  seed_remaining_orders.py  seed_world.py  split_base_regions.py  split_polyhaven_bundle.py  (+2 more)
scripts/items/: __init__.py  affixes.py  armor.py  common.py  consumables.py  crafting.py  materials.py  qualities.py  runes.py  shields.py  weapons.py
src/: world_theory.yaml
web/: app.js  characters  compendium.html  data.json  emblems  index.html  styles.css
(+519 files in other folders)
