[package]
name = "vaern-assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bevy = "0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
vaern-items.workspace = true
vaern-equipment.workspace = true
