[package]
name = "vaern-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "vaern-client"
path = "src/main.rs"

[dependencies]
vaern-core.workspace = true
vaern-protocol.workspace = true
vaern-combat.workspace = true
vaern-character.workspace = true
vaern-items.workspace = true
vaern-equipment.workspace = true
vaern-inventory.workspace = true
vaern-stats.workspace = true
vaern-professions.workspace = true
vaern-assets.workspace = true
vaern-persistence.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
bevy = { version = "0.18", features = ["jpeg"] }
lightyear = { version = "0.26", features = ["client", "input_native", "interpolation", "netcode", "prediction", "replication", "udp"] }
bevy_egui = "0.39"
vaern-data.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
