[package]
name = "vaern-economy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
vaern-core.workspace = true
vaern-items.workspace = true
