[package]
name = "vaern-items"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
vaern-core.workspace = true
vaern-stats.workspace = true
