[package]
name = "vaern-museum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "vaern-museum"
path = "src/main.rs"

[[bin]]
name = "vaern-atlas"
path = "src/atlas.rs"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
vaern-assets = { path = "../vaern-assets" }
image = "0.25"
