[package]
name = "vaern-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "vaern-server"
path = "src/main.rs"

[dependencies]
vaern-core.workspace = true
vaern-data.workspace = true
vaern-protocol.workspace = true
vaern-combat.workspace = true
vaern-character.workspace = true
vaern-stats.workspace = true
vaern-items.workspace = true
vaern-inventory.workspace = true
vaern-equipment.workspace = true
vaern-loot.workspace = true
vaern-professions.workspace = true
vaern-persistence.workspace = true
vaern-assets.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
rand = "0.9"
bevy = { version = "0.18", default-features = false, features = ["bevy_log"] }
lightyear = { version = "0.26", features = ["server", "netcode", "udp", "replication", "interpolation", "input_native", "prediction"] }
